# ccx-upgrades-inference

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  build_deploy.sh  logging.yaml  pr_check.sh  pyproject.toml  renovate.json  requirements.txt  setup.cfg
.github/workflows/: bdd.yaml  bdd.yml  bots-automerge.yml  linters.yaml  pre-commit-autoupdate.yml  test.yml
.gitlab/merge_request_templates/: Default.md
.tekton/: upgrades-inference-pull-request.yaml  upgrades-inference-push.yaml
ccx_inference_service/: main.py  models.py
ccx_inference_service/tests/: __init__.py  test_main.py  test_models.py
ccx_upgrades_inference/: examples.py  inference.py  logging_utils.py  main.py  models.py
ccx_upgrades_inference/tests/: test_inference.py  test_main.py  test_metrics.py  test_models.py
deploy/: clowdapp.yaml  test.yaml
docs/: deployment.md
src/: main.py  models.py  test_main.py  test_models.py
