[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[pycodestyle]
max-line-length = 100
exclude = [".tox",".git","__pycache__","build","dist","tests/","samples/","*.pyc","*.egg-info",".cache",".eggs","docs",".venv","venv"]
