[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ccx-upgrades-inference"
dynamic = ["version"]
readme = "README.md"
license = {text="Apache 2.0"}
authors = [
    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">= 3.10"
dependencies = [
    "boto3",
    "fastapi==0.136.1",
    "prometheus_fastapi_instrumentator==7.1.0",
    "python-json-logger",
    "sentry-sdk>=1.37.1",
    "uvicorn[standard]==0.46.0",
    "watchtower"
]

[project.urls]
Homepage = "https://github.com/RedHatInsights/ccx-upgrades-inference"

[tool.setuptools.packages.find]
exclude = ["*.tests"]

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
    "pytest-cov",
]
