[metadata]
name = ccx-upgrades-inference
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
home-page = https://redhat.com/ccx-upgrades-inference
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.9.7

[options]
packages = find:
python_requires = >=3.6
install_requires =
    uvicorn[standard] >= 0.20.0
    fastapi == 0.88.0
    prometheus_fastapi_instrumentator == 5.9.1
